setting up a basic test server

--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index"
   },
   "author": "John Hatcher",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "config": "^1.15.0",
+    "express": "^4.13.3"
+  }
 }
