--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index"
+    "start": "node --harmony --use_strict ./index.js"
   },
   "author": "John Hatcher",
   "license": "ISC",
