--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node --harmony --use_strict ./index.js"
+    "start": "node --harmony --use_strict ./index.js",
+    "reload": "pkill -SIGUSR2 -o -x node"
   },
   "author": "John Hatcher",
   "license": "ISC",
